--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 
 spring:
   datasource:
-    url: jdbc:h2:file:~/data/demoRefKt;TRACE_LEVEL_FILE=4
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
-    #url: jdbc:mysql://localhost:3306/hexa?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-    #driverClassName: com.mysql.cj.jdbc.Driver
-    #username: root
-    #password: root
-    initialization-mode: always
+    #url: jdbc:h2:file:~/data/demoRefKt;TRACE_LEVEL_FILE=4
+    #driverClassName: org.h2.Driver
+    #username: sa
+    #password: password
+    url: jdbc:mysql://localhost:3306/hexa?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
+    initialization-mode: never
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    #database-platform: org.hibernate.dialect.MySQL5Dialect
+    #database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
       ddl-auto: update
     properties:
